--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:pro": "node ./dist/server.js",
+    "start:dev": " ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "lint": "eslint src --ignore-path .eslintignore --ext .ts",
     "lint:fix": "npx eslint src --fix",
@@ -17,7 +19,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "joi": "^17.11.0",
+    "mongoose": "^8.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
@@ -27,6 +31,8 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.1.0",
-    "typescript": "^5.2.2"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2",
+    "validator": "^13.11.0"
   }
 }
